<resources>
    <string name="app_name">SuperHeroCharacterGenerator</string>
    <string name="roll_a_character">Roll Character</string>
    <string name="origin">ORIGIN:</string>
    <string name="physical_form">PHYSICAL FORM:</string>
    <string name="subform">SUBFORM:</string>
    <string name="powers">POWERS:</string>
    <string name="character_name">CHARACTER NAME:</string>
    <string name="fighting">FIGHTING:</string>
    <string name="agility">AGILITY:</string>
    <string name="strength">STRENGTH:</string>
    <string name="endurance">ENDURANCE:</string>
    <string name="reason">REASON:</string>
    <string name="Intuition">INTUITION:</string>
    <string name="Psyche">PSYCHE:</string>
    <string name="random">RANDOM</string>
    <string name="health">HEALTH:</string>
    <string name="karma">KARMA:</string>
    <string name="save_character">Save Character</string>
</resources>
