<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:orientation="horizontal"
              tools:context=".MainActivity"
              android:baselineAligned="false"
              android:background="@color/material_deep_teal_200">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="top"
        android:background="@color/dim_foreground_material_dark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/character_name"
            android:id="@+id/headerCharacterName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/textViewName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/physical_form"
            android:id="@+id/headerPhysicalForm"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Physical form Text"
            android:id="@+id/textviewPhysicalForm"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/subform"
            android:id="@+id/headerSubform"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="subform Text"
            android:id="@+id/textViewSubform"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/origin"
            android:id="@+id/headerOrigin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Origin text"
            android:id="@+id/textViewOrigin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/powers"
            android:id="@+id/headerPowers"/>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/powersList"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@color/dim_foreground_material_dark">

        <TextView
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fighting"
            android:id="@+id/textView"
            android:background="@color/accent_material_light"/>
        <TextView
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random"
            android:id="@+id/textViewAbilityFighting"/>


        <TextView
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agility"
            android:id="@+id/textView2"/>
        <TextView
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random"
            android:id="@+id/textViewAbilityAgility"/>

        <TextView
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strength"
            android:id="@+id/textView3"/>
        <TextView
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random"
            android:id="@+id/textViewAbilityStrength"/>

        <TextView
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endurance"
            android:id="@+id/textView4"/>
        <TextView
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random"
            android:id="@+id/textViewAbilityEndurance"/>

        <TextView
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reason"
            android:id="@+id/textView5"/>
        <TextView
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random"
            android:id="@+id/textViewAbilityReason"/>

        <TextView
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Intuition"
            android:id="@+id/textView6"/>
        <TextView
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random"
            android:id="@+id/textViewAbilityIntuition"/>

        <TextView
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Psyche"
            android:id="@+id/textView7"/>
        <TextView
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random"
            android:id="@+id/textViewAbilityPsyche"/>
        <TextView
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health"
            android:id="@+id/textView8"/>
        <TextView
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random"
            android:id="@+id/textViewAbilityHealth"/>
        <TextView
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/karma"
            android:id="@+id/textView9"/>
        <TextView
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random"
            android:id="@+id/textViewAbilityKarma"/>

            <Button
                android:layout_margin="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_character"
                android:id="@+id/saveButton"/>
            <Button
                android:layout_margin="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roll_a_character"
                android:id="@+id/rollButton"/>


    </LinearLayout>


</LinearLayout>
